<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.tigerjoys.np</groupId>
  	<artifactId>code-generator</artifactId>
  	<version>0.0.1-SNAPSHOT</version>
  	<packaging>jar</packaging>

	<name>code generator</name>
  	<description>code generator project</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>

		<!-- soft version -->
		<freemarker_version>2.3.26-incubating</freemarker_version>
		<guava_version>22.0</guava_version>
		<mysql_version>5.1.40</mysql_version>
		<logback_version>1.1.11</logback_version>
		<commons_lang3_version>3.5</commons_lang3_version>
		<commons_io_version>2.6</commons_io_version>
		<jackson_version>2.11.2</jackson_version>

		<!-- Build args -->
		<argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline>
		<skip_maven_deploy>false</skip_maven_deploy>
		<skip_maven_test>true</skip_maven_test>
		<project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>
		<!-- for maven compiler plugin -->
		<maven_compiler_plugin_version>2.3.2</maven_compiler_plugin_version>
		<java_source_version>1.8</java_source_version>
		<java_target_version>1.8</java_target_version>
		<file_encoding>UTF-8</file_encoding>
	</properties>
  
  	<dependencies>
		<dependency>
	        <groupId>org.freemarker</groupId>
	        <artifactId>freemarker</artifactId>
			<version>${freemarker_version}</version>
	    </dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava_version}</version>
		</dependency>
		<dependency>
	        <groupId>mysql</groupId>
	        <artifactId>mysql-connector-java</artifactId>
			<version>${mysql_version}</version>
	    </dependency>
    	<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback_version}</version>
		</dependency>
	    <dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons_lang3_version}</version>
		</dependency>
    	<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons_io_version}</version>
		</dependency>
	    <dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson_version}</version>
		</dependency>
  	</dependencies>

	<build>
		<plugins>
			<!-- 打包source文件为jar文件 -->
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<attach>true</attach>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- 指定jdk版本 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>${java_source_version}</source>
					<target>${java_source_version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
					<fork>true</fork>
					<meminitial>128m</meminitial>
					<maxmem>512m</maxmem>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<skip>${skip_maven_test}</skip>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
</project>